# copytool

./: README.md
copytool/: copytool.py  pyproject.toml
copytool/tests/: test_copytool.py
