[tool.poetry]
name = "copytool"
version = "0.1.0"
description = ""
authors = ["ArtFlag <arthur.flageul@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
ipdb = "^0.12.0"
flake8 = "^3.7"
black = {version = "^18.3-alpha.0",allows-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
