[tool.poetry]
name = "copytool"
version = "0.1.0"
description = ""
authors = ["ArtFlag"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
ipdb = "^0.12.0"
flake8 = "^3.7"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
